Permission matrix is working

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 # =======================
 # DATABASE CONFIG
 # =======================
-spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=LMS;encrypt=false
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:1433;databaseName=LLMS;encrypt=false
 spring.datasource.username=wcadmin
 spring.datasource.password=wcadmin
 
@@ -46,4 +46,12 @@ mfa.email.body=Your verification code is %s
 # =======================
 logging.level.org.springframework=INFO
 logging.level.com.student.lms=DEBUG
+# =======================
+# hikari
+# =======================
+spring.datasource.hikari.maximum-pool-size=20
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+
 
